--- a/nextjs-client/package.json
+++ b/nextjs-client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/clerk-react": "^4.25.2",
     "@clerk/nextjs": "^5.0.7",
+    "@hookform/resolvers": "^3.4.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,8 +30,11 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
