--- a/nextjs-client/package.json
+++ b/nextjs-client/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^4.25.2",
-    "@clerk/nextjs": "^5.0.7",
     "@hookform/resolvers": "^3.4.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -19,10 +17,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "convex": "^1.10.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-client-cookies": "^1.1.1",
@@ -32,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-textarea-autosize": "^8.5.3",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
