change config header websocket + fix connect websocket client

--- a/springboot-server/src/main/resources/application-dev.yaml
+++ b/springboot-server/src/main/resources/application-dev.yaml
@@ -8,3 +8,9 @@ app:
   tokenExpirationMsec: 864000000
   authorizedRedirectUris:
     - http://localhost:3000/oauth2/redirect
+logging:
+  level:
+    org:
+      springframework:
+        web:
+          socket=DEBUG:
