Update search index user to add friend from client
+ Funtion searchUsers
+ UI Client update

--- a/nextjs-client/tsconfig.json
+++ b/nextjs-client/tsconfig.json
@@ -28,6 +28,6 @@
     ".next/types/**/*.ts",
     "convex/auth.config.ts",
     "convex/auth.config.ts"
-  ],
+, "hooks/swr/useFriendRequests.jsx"  ],
   "exclude": ["node_modules"]
 }
