--- a/nextjs-client/package.json
+++ b/nextjs-client/package.json
@@ -33,6 +33,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-resizable-panels": "^2.0.19",
+    "react-responsive": "^10.0.0",
     "react-textarea-autosize": "^8.5.3",
     "sockjs-client": "^1.6.1",
     "swr": "^2.2.5",
