--- a/nextjs-client/package.json
+++ b/nextjs-client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -26,12 +27,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "compressorjs": "^1.2.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-client-cookies": "^1.1.1",
     "next-nprogress-bar": "^2.3.12",
     "next-themes": "^0.3.0",
+    "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
