--- a/nextjs-client/package.json
+++ b/nextjs-client/package.json
@@ -37,6 +37,7 @@
     "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-resizable-panels": "^2.0.19",
     "react-responsive": "^10.0.0",
